--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>WOFF アプリ サンプル</title>
     <script>
         // WOFF アプリ ID を設定する
-        const woffId = "5Dy43Ez8TBgaLF7Tc7-acQ";
+        const woffId = "6WiqzH3CzFx-LTigKHUxSQ";
     </script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
