--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WOFF アプリ サンプル</title>
+    <title>WOFF アプリ　音声送信 サンプル</title>
     <script>
         // WOFF アプリ ID を設定する
         const woffId = "YmDsq83fc37SauPFVb7DkQ";
