--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </header>
 
     <div class="container">
-        <div>
+        <div class="section">
             <form action="https://fn-yana-javaide.azurewebsites.net/api/TestSendAIMessageToBot?" method="post" enctype="multipart/form-data">
                     <!-- ファイル選択ボタン -->
                     <input type="file" name="userfile">
