--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="section">
             <h2>ファイルを送信する</h2>
             <p>AzureFunctionsにファイルを送信します。</p>
-            <form action="https://fn-yana-javaide.azurewebsites.net/api/TestSendAIMessageToBot?" method="post" enctype="multipart/form-data">
+            <form action="" method="post" enctype="multipart/form-data">
                     <!-- ファイル選択ボタン -->
                     <input class="btn" type="file" name="userfile">
                     <!-- 送信ボタン -->
